--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
-    "@ngx-translate/core": "^12.1.2",
-    "@ngx-translate/http-loader": "^5.0.0",
+    "@ngneat/transloco": "^2.18.4",
+    "@ngneat/transloco-locale": "^1.3.3",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
